// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator dbml {
  provider = "prisma-dbml-generator"
  output   = "../dbml"
}

enum SessionRole {
  CUSTOMER
  KITCHEN
}

// Enums
enum OrderStatus {
  SUBMITTED
  CONFIRMED
  PREPARING
  READY
  DELIVERED
  REJECTED
  CANCELLED
}

enum Allergen {
  GLUTEN
  DAIRY
  EGGS
  NUTS
  PEANUTS
  SHELLFISH
  FISH
  SOY
  WHEAT
  SESAME
}

model Category {
  id           Int        @id @default(autoincrement())
  name         String
  type         String
  displayOrder Int        @default(0)
  createdAt    DateTime   @default(now())
  updatedAt    DateTime   @updatedAt
  items        MenuItem[]

  @@index([displayOrder])
}

model MenuItem {
  id          Int        @id @default(autoincrement())
  name        String
  description String?
  priceCents  Int
  categoryId  Int
  available   Boolean    @default(true)
  allergens   Allergen[]
  imageUrl    String?
  createdAt   DateTime   @default(now())
  updatedAt   DateTime   @updatedAt

  category   Category    @relation(fields: [categoryId], references: [id])
  orderItems OrderItem[]

  @@index([categoryId])
  @@index([available])
}

model Session {
  id            String      @id @default(cuid())
  seatNumber    Int
  role          SessionRole @default(CUSTOMER)
  activeOrderId Int?        @unique
  lastActivity  DateTime    @default(now())
  createdAt     DateTime    @default(now())
  expiresAt     DateTime

  activeOrder Order?  @relation("ActiveOrder", fields: [activeOrderId], references: [id])
  orders      Order[] @relation("SessionOrders")

  @@index([seatNumber])
  @@index([expiresAt])
}

model Order {
  id                 Int         @id @default(autoincrement())
  sessionId          String
  seatNumber         Int
  status             OrderStatus @default(SUBMITTED)
  totalCents         Int
  queuePosition      Int? // TODO: Constrait can't be less than 1
  estimatedStartTime DateTime?
  createdAt          DateTime    @default(now())
  updatedAt          DateTime    @updatedAt

  session       Session     @relation("SessionOrders", fields: [sessionId], references: [id], onDelete: Cascade)
  items         OrderItem[]
  activeSession Session?    @relation("ActiveOrder")

  @@index([sessionId])
  @@index([status])
  @@index([seatNumber])
  @@index([createdAt])
}

model OrderItem {
  id                 Int      @id @default(autoincrement())
  orderId            Int
  menuItemId         Int
  quantity           Int      @default(1)
  priceSnapshotCents Int
  createdAt          DateTime @default(now())

  order    Order    @relation(fields: [orderId], references: [id], onDelete: Cascade)
  menuItem MenuItem @relation(fields: [menuItemId], references: [id])

  @@index([orderId])
  @@index([menuItemId])
}
